# OCRImageOptimizerApp

./: .gitignore  .gitmodules  CMakeLists.txt  OCRImageOptimizerApp.sln  README.md
.github/workflows/: cd.yml  main.yml
src/: OCRImageOptimizerApp.aps  OCRImageOptimizerApp.rc  OCRImageOptimizerApp.vcxproj  OCRImageOptimizerApp.vcxproj.filters  main.cpp  resource.h
